# ratherlabs-challenge-rust

./: Cargo.toml
.devcontainer/: devcontainer.json
benches/: orderbook.rs
src/: binance.rs  main.rs  orderbook.rs  prices.rs
src/binance/: parsers.rs
